RESOLVED FIXED74077
REGRESSION(r101683): QQuickWebView doesn't work with OpenGL/ES 2.0
https://bugs.webkit.org/show_bug.cgi?id=74077
Summary REGRESSION(r101683): QQuickWebView doesn't work with OpenGL/ES 2.0
Simon Hausmann
Reported 2011-12-08 04:57:27 PST
The vertex shader in PageProxyMaterialShader uses the built-in "gl_Vertex" attribute, which is not part of OpenGL/ES 2.0
Attachments
REGRESSION(r101683): QQuickWebView doesn't work with OpenGL/ES 2.0 (2.23 KB, patch)
2011-12-08 05:09 PST, Simon Hausmann
kenneth: review+
Simon Hausmann
Comment 1 2011-12-08 05:09:16 PST
Created attachment 118366 [details] REGRESSION(r101683): QQuickWebView doesn't work with OpenGL/ES 2.0
Kenneth Rohde Christiansen
Comment 2 2011-12-08 05:13:14 PST
Comment on attachment 118366 [details] REGRESSION(r101683): QQuickWebView doesn't work with OpenGL/ES 2.0 View in context: https://bugs.webkit.org/attachment.cgi?id=118366&action=review rs=me > Source/WebKit2/UIProcess/API/qt/qquickwebpage.cpp:239 > + return > + "attribute highp vec4 vertex; \n" > + "void main() { gl_Position = vertex; }"; why 3 lines?
Simon Hausmann
Comment 3 2011-12-08 07:27:44 PST
*** Bug 74073 has been marked as a duplicate of this bug. ***
Simon Hausmann
Comment 4 2011-12-08 07:31:36 PST
Note You need to log in before you can comment on or make changes to this bug.